tests/snapshots/examples_fixtures/type_system__failing__165_self_recursive_precision_prefers_e300.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/165_self_recursive_precision_prefers_e300.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Annotation Type Mismatch

The value of `x` does not match its type annotation.

  examples/type_system/failing/165_self_recursive_precision_prefers_e300.flx:36:21
   |
36 |     let x: String = loop_back(3)
   |                     ^^^^^^^^^^^^
   |                     ------------ this value has type `Int`

   |            ------ but `x` was annotated as `String`

Note:
  annotated type: String
  value type: Int

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.
== stdout ==
<not executed>
